syntax = "proto3";

package event;

import "google/protobuf/timestamp.proto";
option go_package = "./;pb";

service Events {
  rpc CreateEvent (CreateEventRequest) returns (EventResponse) {}
  rpc UpdateEvent (EventUpdateRequest) returns (EventUpdateResponse) {}
  rpc DeleteEvent (EventDeletionRequest) returns (EventDeletionResponse) {}
  rpc DailyEventList (IntervalListRequest) returns (EventList) {}
  rpc WeeklyEventList (IntervalListRequest) returns (EventList) {}
  rpc MonthlyEventList (IntervalListRequest) returns (EventList) {}
}

message CreateEventRequest {
  string title = 1;
  google.protobuf.Timestamp date_and_time = 2;
  int32 duration = 3;
  string description = 4;
  string user_id = 5;
  int32 time_to_notify = 6;
}

message EventResponse {
  string event_id = 1;
  string title = 2;
  google.protobuf.Timestamp date_and_time = 3;
  int32 duration = 4;
  string description = 5;
  string user_id = 6;
  int32 time_to_notify = 7;
}

message EventUpdateRequest {
  string event_id = 1;
  CreateEventRequest event = 2;
}

message EventUpdateResponse {
  string event_id = 1;
  string message = 2;
}

message EventDeletionRequest {
  string event_id = 1;
}

message EventDeletionResponse {
  string event_id = 1;
  string message = 2;
}

message IntervalListRequest {
  google.protobuf.Timestamp date_and_time = 1;
  string user_id = 2;
}

message EventList {
  repeated EventResponse event_list = 1;
}